implementacion de apis

--- a/estilos.css
+++ b/estilos.css
@@ -116,6 +116,12 @@ background-color: rgba(0, 208, 0, 0.959);
     margin-top: 2%;
 }
 
+/*VALOR DOLAR*/
+.valorDolarTitle{
+    text-align: center;
+}
+
+
 
 
 
