--- a/estilos.css
+++ b/estilos.css
@@ -8,35 +8,40 @@ body{
 }
 
 /*MENU*/
+nav{
+    background-color: #85FFBD;
+background-image: linear-gradient(45deg, #aaecc9 60%, #4bec36 100%);
+
+}
 .menu__letras{
     background-color: black;
 }
 .menu__letras a{
-    color: white;
+    color: black;
+    font-size: 17.5px;
     font-family: 'Montserrat', sans-serif;
 }
 
 .menu__letras--icon{
-    background-color: black;
     text-decoration: none;
 }
 .menu__letras--icon a{
-    color: white;
+    color: black;
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
 
 }
 .menu__letras2{
-    color: white;
+    color: black;
 }
 .navbar-light .navbar-nav .nav-link.active {
-    color: white;
+    color: black;
 }
 .navbar-light .navbar-nav .nav-link {
-    color: white;
+    color: black;
 }
 .navbar-light .navbar-nav .nav-link:hover{
-    color: green;
+    color: white;
 }
 
 
@@ -52,8 +57,9 @@ body{
 
 .titulo__principal__conversor{
     text-align: center;
-    margin-top: 10px;
-    border-bottom: 2px solid black;
+    margin-top: 3%;
+    padding: 10px;
+    border-bottom: 1px solid green;
 }
 
 .conversor{
@@ -81,7 +87,7 @@ background-color: rgba(0, 208, 0, 0.959);
     text-align: center;
     margin: 10px;
     width: auto;
-    border-bottom: 1px green solid;
+    margin-top: 30px;
 
 }
 
@@ -113,12 +119,38 @@ background-color: rgba(0, 208, 0, 0.959);
 .valorCriptoDivisas{
     font-size: 30px;
     margin-right: 30%;
-    margin-top: 2%;
+    margin-top: 6%;
 }
 
 /*VALOR DOLAR*/
+.valorDolarSection{
+    margin-top: 1%;
+    margin-bottom: 3%;
+}
 .valorDolarTitle{
     text-align: center;
+    font-size: 30px;
+    margin-top: 90px;
+}
+
+footer{
+    border-top: 1px #85FFBD solid ;
+    border-bottom: 2px #85FFBD solid ;
+}
+
+.footer-title{
+    border-bottom: 1px #1df700 solid;
+    padding: 5px;
+}
+
+.footer-media{
+    text-decoration: none;
+    color: #02ad52;
+}
+
+.footer-media:hover{
+    
+    color: #1df700
 }
 
 
@@ -127,6 +159,12 @@ background-color: rgba(0, 208, 0, 0.959);
 
 
 @media (max-width: 991px) {
+
+    .bannerimages{
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+    }
     .padre{
         display: flex;
         justify-content: space-between;
